tests/ui/specialization/min_specialization/repeated_projection_type.stderr
error: cannot specialize on associated type `<V as Id>::This == (I,)`
  --> $DIR/repeated_projection_type.rs:19:15
   |
LL | impl<I, V: Id<This = (I,)>> X for V {
   |               ^^^^^^^^^^^

error: aborting due to 1 previous error

